home and destination pages for desktop

--- a/src/pages/crew/Crew.css
+++ b/src/pages/crew/Crew.css
@@ -1,5 +1,5 @@
 .crew-hero {
-  background: url(../../assets/bg-crew.svg) fixed no-repeat center center/cover;
+  background: url(../../assets/crew/background-crew-desktop.svg) fixed no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
