--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,5 +1,5 @@
 .home-hero {
-  background: url(../../assets/home/background-home-desktop.svg) no-repeat center center/cover;
+  background: url("/assets/home/background-home-desktop.svg") no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
